feat: home row mods also working for layers, implemented as a custom part of evaluation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2021"
 [dependencies]
 heapless = "0.8.0"
 k_board = {version = "1.2.4", features = ["full"]}
+usbd-human-interface-device = "0.5.0"
